--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -101,12 +101,42 @@ form {
   border: 1px solid #00c352;
 }
 
+.slick-dots{
+  position: absolute !important;
+  list-style: none;
+  li {
+    background-image: url("../img/sliderUnactive.png");
+    width: 15px !important;
+    height: 15px !important;
+    margin: 0px !important;
+    padding-right: 5px !important;
+  }
+  li.slick-active{
+    width: 35px !important;
+    background-image: url("../img/sliderActive.png");
+  }
+
+}
+ul{
+  style: none !important;
+}
+
+.slick-dots li.slick-active button:before{
+  color: transparent !important;
+}
+.slick-dots li button:before{
+  color: transparent !important;
+}
 @media (min-width: 1141px){
   body{
     margin-right: 18%;
     margin-left: 18%;
 
   }
+  .container-fluid{
+    padding:0px !important
+  }
+
 }
 @media (min-width: 768px) and (max-width: 1140px){
   body{
@@ -114,12 +144,21 @@ form {
     margin-left: 100px;
 
   }
+  .container-fluid{
+    padding:0px !important
+  }
+  .container-fluid:last-of-type {
+    padding: 0px !important
+  }
+
 }
 
 @media (max-width: 767px) {
 
+
   .slick-dots{
-    top: -25px
+    top: -25px;
+    text-align: center!important;
   }
   .form-header{
     font-size: 24px;
@@ -232,34 +271,6 @@ form {
 
 
 }
-
-.slick-dots{
-  position: absolute !important;
-  list-style: none;
-  li {
-    background-image: url("../img/sliderUnactive.png");
-    width: 15px !important;
-    height: 15px !important;
-    margin: 0px !important;
-    padding-right: 5px !important;
-  }
-  li.slick-active{
-    width: 35px !important;
-    background-image: url("../img/sliderActive.png");
-  }
-
-}
-ul{
-  style: none !important;
-}
-
-.slick-dots li.slick-active button:before{
-  color: transparent !important;
-}
-.slick-dots li button:before{
-  color: transparent !important;
-}
-
 @media (max-width: 280px){
   .slider-header{
     padding-bottom: 60px;
@@ -268,10 +279,3 @@ ul{
     top: -55px
   }
 }
-.container-fluid{
-  padding:0px !important
-}
-.container-fluid:last-of-type{
-  padding:0px !important
-}
-
